# alpha-eigen

./: .gitignore  LICENSE  README.md  main.py  mytestfile.hdf5  requirements.txt  setup.cfg
alpha-eigen/: 70_group_data  PolyPu-70g.py  TestProblem-Asym-Sub.py  alpha_analysis.py  create_h5file_from_npz.py  linear_alg_ksolve.py  main.py  multigroup_sn.py  poly_pu.py  test_sweep1D.py
alpha-eigen/Attempt2/: main.py
alpha-eigen/Attempt2/classes/: direction.py  group.py  material.py  phi.py  slab.py  zone.py
alpha-eigen/Attempt3/: group.py  material.py  phi.py  slab.py  zone.py
alpha-eigen/Results/: 70g_mgk.npz  AngularvsScalar.xlsx  GroupCollapse.xlsx
alpha-eigen/classes/: eigenvalue.py  group.py  material.py  phi.py  slab.py  time_unit.py  zone.py
alpha-eigen/data/: metal.hdf5  polyethylene.hdf5  polyethyline.hdf5
alpha_eigen/: eigenvalue.py  group.py  one_direction.py  time_unit.py  zone.py
alpha_eigen/data/1_group/: dahl_problem.hdf5
alpha_eigen_modules/: group.py  inputs.py  material.py  one_direction.py  phi.py  slab.py  time_unit.py  zone.py
alpha_eigen_modules/tests/: context.py  long_kornreich_parsons.py  test_short_kornreich_parsons.py
docs/: Previous-Work.ipynb
inputs/: dahl.py  kornreich_parsons_symmetric.py  main.py  mcclarren_70g.py
inputs/data/70_group/: metal.hdf5
tests/: context.py  material.py  test_long_kornreich_parsons.py  test_short_kornreich_parsons.py
