[metadata]
name = alpha_eigen-clemekay
version = 0.0.1
author = Kayla Clements
author_email = clemekay@oregonstate.edu
description = A small sample package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/clemekay/alpha-eigen
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD 3-Clause License
	Operating System :: OS Independent

[options]
package_dir = 
	= modules
packages = find:
python_requires = >=3.6

[options.packages.find]
where = modules

