[metadata]
name = alpha-eigen
version = 0.0.1
author = Kayla Clements
author_email = clemekay@oregonstate.edu
description = Performs dynamic mode decomposition to find alpha-eigenvalues of time-dependent radiation transport
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/clemekay/alpha-eigen
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
	= alpha_eigen_modules
packages = find:
install_requires = 
	numpy
	h5py
setup_requires = 
	numpy
	h5py
python_requires = >=3.6

[options.packages.find]
where = alpha_eigen_modules

